refactored Dockerfile and docker-compose.yml file added Dockerfile for clion remote development set basic socket and sendto in main

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,8 @@ services:
   debian:
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: Dockerfile
+    container_name: ping_box
+    volumes:
+    - ./:/app/ping
     tty: true
